@@ -1,0 +1,28 @@
+
+ 
+     Readme for MogwaiERDesignerNG Squirrel Plugin
+     
+Requirements
+
+This Plugin has been tested with SquirrelSQL 2.6.4     
+     
+Installation
+
+Copy the contents of the plugin directory of the distribution
+to the plugins directory of your squirrel installation, including
+all jars and other files and directories
+
+Usage
+
+The database browser has a new context menu entry for catalog and
+schema objects called "Start MogwaiERDesigner". After clicking this
+entry, the plugin will create a new Mogwai Database Diagram View and
+will start the reverse engineering process. After the reverse enginnering
+is finished, you can view, format, modify and export your database
+as XML, PNG, GIF, JPEG, SVG.
+
+Have fun!
+
+For problems and comments, please use the issue tracker hosted at
+http://sourceforge.net/projects/mogwai. Thank you for using Mogwai
+ERDesigner
